# mini-swe-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  prediction_usage.json  pyproject.toml
.agent/: EXECPLAN_monte_carlo.md  EXECPLAN_rejected_actions.md  EXECPLAN_verifier.md
.github/: copilot-instructions.md
.github/workflows/: build-docs.yaml  release.yaml
docs/: contributing.md  faq.md  index.md  quickstart.md
docs/advanced/: control_flow.md  environments.md  v2_migration.md
docs/models/: quickstart.md
docs/overrides/: main.html
docs/reference/agents/: default.md
docs/reference/environments/: swerex_modal.md
docs/reference/models/: litellm_response_toolcall.md  overview.md
docs/usage/: mini.md  monte_carlo.md  output_files.md
prompts/verifier/basic/reward/: reward.jinja
prompts/verifier/basic/verifier/: selection.jinja
prompts/verifier/basic_reward/: reward.jinja  system.jinja
prompts/verifier/basic_verifier/: selection.jinja  system.jinja
prompts/verifier/checklist/reward/: reward.jinja
prompts/verifier/checklist/verifier/: selection.jinja
prompts/verifier/domain/reward/: reward.jinja
prompts/verifier/domain/verifier/: selection.jinja
src/minisweagent/: __init__.py  exceptions.py
src/minisweagent/agents/: __init__.py  default.py  interactive.py
src/minisweagent/config/: README.md  __init__.py  default.yaml  mini.yaml  mini_textbased.yaml
src/minisweagent/config/benchmarks/: swebench.yaml  swebench_backticks.yaml  swebench_kat_dev_32b.yaml  swebench_kimi_dev_72b.yaml  swebench_modal.yaml  swebench_qwen3_32b.yaml  swebench_qwen3_coder_next.yaml  swebench_xml.yaml
src/minisweagent/config/extra/: swebench.yaml  swebench_deterministic.yaml  swebench_devtral.yaml  swebench_glm_4_7_flash.yaml  swebench_gpt5_mini.yaml  swebench_kat_dev_72b.yaml  swebench_qwen3_32b.yaml  swebench_qwen3_4b_instruct.yaml  swebench_qwen3_coder.yaml  verifier_reward.yaml
src/minisweagent/environments/: README.md  __init__.py  singularity.py
src/minisweagent/environments/extra/: swerex_modal.py
src/minisweagent/models/: __init__.py  portkey_model.py
src/minisweagent/run/: mini.py  mini_extra.py
src/minisweagent/run/benchmarks/: swebench.py  swebench_single.py
src/minisweagent/run/benchmarks/utils/: batch_progress.py
src/minisweagent/run/extra/: monte_carlo.py  rejected_actions.py  swebench.py  upload_docent.py
src/minisweagent/run/extra/utils/: rollout_actions.py  trajectory_replay.py
src/minisweagent/run/utilities/: mini_extra.py
src/minisweagent/run/utils/: rejected_actions.py  trajectory.py
src/minisweagent/utils/: docent_upload.py  prediction_usage.py  serialize.py
src/minisweagent/verifiers/: __init__.py  action_similarity.py  checklist.py  first_valid.py  llm.py  prompt_loader.py  query_utils.py  reward_model.py
tests/: test_fire.py
tests/agents/: test_default.py  test_init.py  test_interactive.py  test_reward_verifier.py  test_verifier.py
tests/environments/: test_singularity.py
tests/models/: test_test_models.py
tests/run/: test_cli_integration.py  test_local.py  test_monte_carlo.py  test_rejected_actions.py  test_swebench_single.py
tests/utils/: test_serialize.py
tests/verifiers/: test_action_similarity.py  test_checklist.py  test_prompt_loader.py  test_query_path.py
